Fixed bug #47714 (autoloading classes inside exception_handler leads to crashes)