Zend/zend.c
@@ -1192,20 +1192,20 @@ ZEND_API int zend_execute_scripts(int type TSRMLS_DC, zval **retval, int file_co
 					zval *orig_user_exception_handler;
 					zval **params[1], *retval2, *old_exception;
 					old_exception = EG(exception);
-					zend_exception_save(TSRMLS_C);
+					EG(exception) = NULL;
 					params[0] = &old_exception;
 					orig_user_exception_handler = EG(user_exception_handler);
 					if (call_user_function_ex(CG(function_table), NULL, orig_user_exception_handler, &retval2, 1, params, 1, NULL TSRMLS_CC) == SUCCESS) {
 						if (retval2 != NULL) {
 							zval_ptr_dtor(&retval2);
 						}
-						zend_exception_restore(TSRMLS_C);
 						if (EG(exception)) {
 							zval_ptr_dtor(&EG(exception));
 							EG(exception) = NULL;
 						}
+						zval_ptr_dtor(&old_exception);
 					} else {
-						zend_exception_restore(TSRMLS_C);
+						EG(exception) = old_exception;
 						zend_exception_error(EG(exception), E_ERROR TSRMLS_CC);
 					}
 				} else {
